<resources>
    <string name="app_name">BellayEleganteJoyeria</string>
    <string name="B1">Entrar</string>
    <string name="B2">Registrarse</string>
    <string name="B3">Continuar</string>
    <string name="B4">Finalizar Registro</string>
    <string name="B5">Guardar</string>
    <string name="B6">Finalizar compra</string>
    <string name="B7">Atras</string>
    <string name="B8">Atras</string>
    <string name="B9">Atras</string>
    <string name="B10">Atras</string>
    <string name="B11">Atras</string>
    <string name="B12">Aretes</string>
    <string name="B13">Collares</string>
    <string name="B14">Anillos</string>
    <string name="B15">Pulseras</string>
    <string name="B16">Cadenas</string>
    <string name="B17">Categorias</string>
    <string name="B18">Cuenta</string>
    <string name="B19">Bolsa</string>
    <string name="B20">Cuenta</string>
    <string name="B21">Comprar</string>
    <string name="InfoTarjeta">Información de tarjeta</string>
    <string name="NumTarjeta">Numero de Tarjeta</string>
    <string name="Nombre">Nombre</string>
    <string name="Mes">Mes</string>
    <string name="Anio">Año</string>
    <string name="CVV">Cvv</string>
    <string name="GuardadoExitoso">Tarjeta Guardada con Exito</string>
    <string name="app_comf">Confirmación de Pedido</string>
    <string name="forma_de_pago">Forma de Pago</string>
    <string name="trasferencia">Trasferencia</string>
    <string name="tarjeta_de_cr_dito_d_bito">Tarjeta de Crédito/Débito</string>
    <string name="paypal">PayPal</string>
    <string name="deposito">Deposito</string>
    <string name="pago_contra_entrega">Pago contra entrega</string>
    <string name="forma_de_env_o">Forma de Envío</string>
    <string name="env_o_express">Envío Express</string>
    <string name="envio_standard">Envio Standard</string>
    <string name="garantia_del_envio">Garantia del Envio</string>
    <string name="FaltanCampos">Faltan Campos</string>
    <string name="Reg">Registro</string>
    <string name="InfPulseras">Pulseras</string>
    <string name="InfAretes">Aretes</string>
    <string name="InfCadenas">Cadenas</string>
    <string name="InfCollares">Collares</string>
    <string name="InfAnillos">Anillos</string>
    <string name="InfUsuario">Información de Usuario</string>
    <string name="IniSesioin">Inicio de Sesion</string>
    <string name="InfCategorias">Categorías</string>
    <string name="title_activity_sub_categorias">SubCategorias</string>
    <string name="hint_search">Search</string>
    <string name="title_activity_menu">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="nombreP">Nombre del Producto</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Precio">Precio</string>
</resources>
