<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pago">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="100dp"
                android:text="@string/forma_de_pago"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="196dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:onClick="TCD"
                android:text="@string/tarjeta_de_cr_dito_d_bito"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="196dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="0dp"
                android:onClick="checkButton"
                android:text="@string/paypal"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="196dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="0dp"
                android:onClick="checkButton"
                android:text="@string/deposito"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="196dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:onClick="checkButton"
                android:text="@string/pago_contra_entrega"
                app:layout_constraintStart_toStartOf="parent" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/forma_de_env_o"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioButton5" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/radioGroup2">

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="196dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:onClick="checkButton"
                android:text="@string/env_o_express"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="196dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="0dp"
                android:onClick="checkButton"
                android:text="@string/envio_standard"
                app:layout_constraintStart_toStartOf="parent" />
            </RadioGroup>
            <Switch
                android:id="@+id/switch1"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="0dp"
                android:text="@string/garantia_del_envio"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="218dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="0dp"
                android:text="@string/B6"

                app:layout_constraintStart_toStartOf="@id/scrollView2" />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>