<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categorias">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="410dp"
        android:layout_height="603dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:onClick="Aretes"
                android:text="@string/B12"
                app:layout_constraintStart_toStartOf="@id/scrollView"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:onClick="Anillos"
                android:text="@string/B14"
                app:layout_constraintStart_toStartOf="@id/scrollView"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:onClick="Collares"
                android:text="@string/B13"
                app:layout_constraintStart_toStartOf="@id/scrollView"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:onClick="Cadenas"
                android:text="@string/B16"
                app:layout_constraintStart_toStartOf="@id/scrollView"
                />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:onClick="Pulseras"
                android:text="@string/B15"
                app:layout_constraintStart_toStartOf="@id/scrollView"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="288dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:onClick="Atras"
                android:text="@string/B9"
                app:layout_constraintStart_toStartOf="@id/scrollView" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
