<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        tools:context=".TarjetaDebito"

            android:id="@+id/cardView2"
            android:visibility="visible"
            app:cardCornerRadius="6dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                 <EditText
                    android:id="@+id/Nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/Nombre"
                    android:textAppearance="?android:textAppearanceSmall" />

                <EditText
                    android:id="@+id/NumTarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/NumTarjeta"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:textAppearanceSmall" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Mes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:hint="@string/Mes"
                        android:inputType="numberDecimal"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <EditText
                        android:id="@+id/Anio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:hint="@string/Anio"
                        android:inputType="numberDecimal"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <EditText
                        android:id="@+id/CVV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:hint="@string/CVV"
                        android:inputType="numberDecimal"
                        android:textAppearance="?android:textAppearanceSmall"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/B5"
                    app:layout_constraintTop_toBottomOf="@+id/cardView2"
                    tools:layout_editor_absoluteX="288dp" />

            </LinearLayout>
</androidx.cardview.widget.CardView>